...
                        android:layout_marginRight="@dimen/profile_dot_separator_margin"
                        android:text="\u00b7"
                        android:textColor="@color/text_black"
                        android:visibility="visible" />

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/textview_detail_three"
                        style="@style/CustomFontTextViewStyle.ClientList.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingLeft="0dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/text_black" />
                </LinearLayout>


                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/family_head"
                    style="@style/CustomFontTextViewStyle.ClientList.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:paddingTop="@dimen/register_list_top_bottom_min_padding"
                    android:text="@string/family_head"
...
